add getAllQuestsCurrentUser
