# backend/src/json/swagger-output.json
@@ -753,6 +753,33 @@
         }
       }
     },
+    "/api/quest/get-all-quests-current-user": {
+      "get": {
+        "tags": [
+          "Checkpoints"
+        ],
+        "summary": "Получение всех квестов текущего пользователя кроме черновиков",
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/checkpoint/new": {
       "post": {
         "tags": [
